Bug 912517 - [Message] Crash occuring in MMS when killing the application while the MMS is sending. r=vicamo Change-Id: I4f91efbd7fdc9f47de8f738b4610ce7f27fa5a92